AoT Cache fixup